<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.register.RegisterFragment">
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/login_to_share"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        style="@style/LayoutTextFieldOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/name"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextFieldOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/LayoutTextFieldOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/email"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputName">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextFieldOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.akmalmf.storyapp.ui.components.PasswordEditText
        android:id="@+id/textInputPassword"
        style="@style/LayoutTextFieldOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmail">
        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextFieldOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.akmalmf.storyapp.ui.components.PasswordEditText>

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_regular"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/neet_login"
        android:textAllCaps="false"
        android:textColor="@color/navy_900"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textInputPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegister" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/navy_900"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toTopOf="@+id/buttonRegister" />


</androidx.constraintlayout.widget.ConstraintLayout >