<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.story_create.StoryCreateFragment"
    android:background="@color/white">
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />
    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        android:src="@drawable/ic_image_placeholder" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDescription"
        style="@style/LayoutTextFieldOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/description"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePreview">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextFieldOutline"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:inputType="textMultiLine"
            android:maxLines="3"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCamera"
        style="@style/MainButton"
        android:fontFamily="@font/lato_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/camera"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
        app:layout_constraintEnd_toStartOf="@+id/buttonGalery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGalery"
        style="@style/MainButton"
        android:fontFamily="@font/lato_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/gallery"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonCamera"
        app:layout_constraintTop_toTopOf="@+id/buttonCamera" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSubmit"
        style="@style/MainButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputDescription" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/navy_900"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSubmit"
        app:layout_constraintEnd_toEndOf="@+id/buttonSubmit"
        app:layout_constraintStart_toStartOf="@+id/buttonSubmit"
        app:layout_constraintTop_toTopOf="@+id/buttonSubmit" />


</androidx.constraintlayout.widget.ConstraintLayout>